--- a/ng-diogenes/src/app/shared/components/error-card/error-card.component.html
+++ b/ng-diogenes/src/app/shared/components/error-card/error-card.component.html
@@ -1,5 +1,5 @@
-<div class="flex-center card-wrapper">
-    <mat-card class="material-card-element">
+<div class="flex-center card-container">
+    <mat-card class="card-details">
         <mat-card-header>
             <mat-card-title>
                 {{title}}
