--- a/ng-diogenes/src/styles/components/card-list.scss
+++ b/ng-diogenes/src/styles/components/card-list.scss
@@ -28,6 +28,7 @@
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
         gap: 0.5rem;
+        margin: 1rem;
     }
 
     // The separation is already done by the grid:
