--- a/ng-diogenes/src/app/pages/edit-category/edit-category.component.html
+++ b/ng-diogenes/src/app/pages/edit-category/edit-category.component.html
@@ -18,8 +18,8 @@
 
     <ng-template #categoryFormTemplate>
 
-        <div class="flex-center card-wrapper">
-            <mat-card class="material-card-element">
+        <div class="flex-center card-container">
+            <mat-card class="card-details">
 
                 <!-- Title -->
                 <mat-card-title class="flex-center material-card-title">
