--- a/ng-diogenes/src/app/pages/edit-item/components/edit-single-item/edit-single-item.component.html
+++ b/ng-diogenes/src/app/pages/edit-item/components/edit-single-item/edit-single-item.component.html
@@ -12,8 +12,8 @@
 
     <ng-template #itemFormTemplate>
 
-        <div class="flex-center card-wrapper">
-            <mat-card class="material-card-element">
+        <div class="flex-center card-container">
+            <mat-card class="card-details">
 
                 <mat-card-title class="flex-center material-card-title" *ngIf="!hideTitle">
                     {{isNewItem ? "Create new item" : "Edit item"}}
