--- a/ng-diogenes/src/app/pages/item-detail/item-detail.component.html
+++ b/ng-diogenes/src/app/pages/item-detail/item-detail.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar>
     <mat-toolbar-row>
         <app-go-back></app-go-back>
+        Item detail
     </mat-toolbar-row>
 </mat-toolbar>
 
@@ -10,8 +11,8 @@
 
 <ng-template #notLoading>
 
-    <div class="flex-center card-wrapper" *ngIf="item; else notFound">
-        <mat-card class="material-card-element-no-padding">
+    <div class="flex-center card-container" *ngIf="item; else notFound">
+        <mat-card class="card-details">
             <!-- Header -->
             <mat-card-header>
                 <mat-card-title>
@@ -40,9 +41,13 @@
                 </div>
 
                 <!-- Description -->
-                <p class="item-description no-overflow" *ngIf="item.description">
+                <p class="item-description no-overflow" *ngIf="item.description; else newLine">
                     {{ item.description }}
                 </p>
+                <ng-template #newLine>
+                    <br>
+                </ng-template>
+                
 
                 <!-- Metadata -->
                 <div class="item-image-container thin-border">
