[FEATURE] Create dashboard to access inventory or category overview

--- a/ng-diogenes/src/app/pages/categories-summary/categories-summary.component.html
+++ b/ng-diogenes/src/app/pages/categories-summary/categories-summary.component.html
@@ -5,7 +5,7 @@
 
         <!-- Logo -->
         <div class="flex-center">
-            <app-logo></app-logo>
+            <app-go-back></app-go-back>
             Categories
         </div>
 
