--- a/ng-diogenes/src/app/pages/edit-item/components/edit-single-item/edit-single-item.component.html
+++ b/ng-diogenes/src/app/pages/edit-item/components/edit-single-item/edit-single-item.component.html
@@ -51,6 +51,16 @@
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
+                    
+                    <mat-form-field>
+                        <mat-label>Location</mat-label>
+                        <mat-select formControlName="locationId">
+                            <mat-option *ngFor="let location of locations"
+                                [value]="location.id">
+                                {{ location.name }}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
 
                     <mat-form-field>
                         <mat-label>Description</mat-label>
