--- a/ng-diogenes/src/app/pages/locations-summary/locations-summary.component.html
+++ b/ng-diogenes/src/app/pages/locations-summary/locations-summary.component.html
@@ -6,7 +6,7 @@
         <!-- Logo -->
         <div class="flex-center">
             <app-go-back></app-go-back>
-            Categories
+            Locations
         </div>
 
         <!-- Menus -->
