--- a/ng-diogenes/src/app/pages/edit-item/components/edit-bulk/edit-bulk.component.html
+++ b/ng-diogenes/src/app/pages/edit-item/components/edit-bulk/edit-bulk.component.html
@@ -46,7 +46,7 @@
                     </div>
                 </label>
                 <div>
-                    Click to select the images of the items or drag inside the
+                    Click to select the images of the items or drag them inside the
                     box
                 </div>
             </div>
