--- a/ng-diogenes/src/app/pages/inventory/components/inventory-menu/inventory-menu.component.html
+++ b/ng-diogenes/src/app/pages/inventory/components/inventory-menu/inventory-menu.component.html
@@ -1,4 +1,8 @@
-<button mat-icon-button [matMenuTriggerFor]="menu">
+<button 
+    aria-label="Options"
+    matTooltip="More options"
+    mat-icon-button 
+    [matMenuTriggerFor]="menu">
     <mat-icon>more_vert</mat-icon>
 </button>
 
