--- a/ng-diogenes/src/app/shared/components/go-back/go-back.component.html
+++ b/ng-diogenes/src/app/shared/components/go-back/go-back.component.html
@@ -1,3 +1,6 @@
-<button mat-button (click)="onNavigateBack()">
+<button mat-button 
+    aria-label="Go back"
+    matTooltip="Go back"
+    (click)="onNavigateBack()">
     <mat-icon>arrow_back</mat-icon>
 </button>
