--- a/ng-diogenes/src/app/shared/components/logo/logo.component.html
+++ b/ng-diogenes/src/app/shared/components/logo/logo.component.html
@@ -1,5 +1,5 @@
 <div class="logo-container">
-    <a href="{{isLink ? 'home' : null}}">
+    <a href="{{isLink ? '/#/home' : null}}">
         <img class="logo" src="assets/logo/logo_transparent.png"
             alt="Logo" >
     </a>
