--- a/ng-diogenes/src/app/pages/edit-item/components/edit-single-item/edit-single-item.component.html
+++ b/ng-diogenes/src/app/pages/edit-item/components/edit-single-item/edit-single-item.component.html
@@ -1,5 +1,5 @@
 
-<div *ngIf="isLoading; else notLoading">
+<div *ngIf="isLoading || aIisLoading; else notLoading">
     <app-loading-spinner></app-loading-spinner>
 </div>
 
